--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "bluebird": "^3.7.2",
+        "body-parser": "^1.20.0",
         "express": "^4.17.1",
         "mongoose": "^5.12.3",
         "swagger-jsdoc": "^6.1.0",
