--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     },
     "devDependencies": {
         "nodemon": "^2.0.7"
+    },
+    "engines": {
+        "node": "16.16.0",
+        "npm": "8.11.0"
     }
 }
