--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "private": true,
     "version": "1.0.0",
     "scripts": {
-        "start": "nodemon app.js"
+        "start": "nodemon app.js",
+        "production": "forever app.js"
     },
+    
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "bluebird": "^3.7.2",
