--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
     "author": "Andres Macias",
     "private": true,
     "version": "1.0.0",
+    "main": "app.js",
     "scripts": {
         "start": "nodemon app.js",
         "production": "forever app.js"
     },
-    
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "bluebird": "^3.7.2",
         "body-parser": "^1.20.0",
         "express": "^4.17.1",
+        "forever": "^4.0.3",
         "mongoose": "^5.12.3",
         "swagger-jsdoc": "^6.1.0",
         "swagger-ui-express": "^4.1.6"
